--- a/index.html
+++ b/index.html
@@ -333,6 +333,47 @@
                         <div class="skills__list grid">
                             <div class="skills__data">
                                 <div class="skills__titles">
+                                    <h3 class="skills__name"><img src="/assets/img/sql.png" class="skills__logo"
+                                            width="40px" alt=""> Sql</h3>
+                                    <span class="skills__number">100%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__sql"></span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name"><img src="/assets/img/python.gif" class="skills__logo"
+                                            width="40px" alt=""> python</h3>
+                                    <span class="skills__number">70%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__css"></span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name"><img src="/assets/img/power_bi.gif" class="skills__logo"
+                                            width="40px" alt=""> Power BI</h3>
+
+                                    <span class="skills__number">60%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__js"></span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name"><img src="/assets/img/github.gif" class="skills__logo"
+                                            width="40px" alt=""> Github</h3>
+                                    <span class="skills__number">40%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__react"></span>
+                                </div>
+                            </div>                            
+                            <div class="skills__data">
+                                <div class="skills__titles">
                                     <h3 class="skills__name"><img src="/assets/img/azure.png" class="skills__logo"
                                             width="40px" alt=""> Azure</h3>
                                     <span class="skills__number">50%</span>
