--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
                 <div class="about__data">
                     <p class="about__description">
-                        Hi I'm Bhushan sagar.a passionate data engineer with expertise in SQL, ETL, data warehousing, and cloud technologies.
+                        Hi I'm Bhushan sagar. A passionate data engineer with expertise in SQL, ETL, data warehousing, and cloud technologies.
                         <br>
                         My skill set includes dynamic query development, data integration, and visualization using tools like Power BI, MS SQL Server, MySQL, Apache Spark, AWS, and Azure. <br>
                         I'm a Data Engineer and I enjoy exploring new technologies and leveraging data to build efficient, impactful solutions. 
@@ -176,17 +176,6 @@
                             <span class="about__info-name">Completed <br />
                                 project</span>
                         </div>
-                        <div>
-                            <span class="about__info-title">24/7</span>
-                            <span class="about__info-name">Online<br />
-                                support</span>
-                        </div>
-                    </div>
-
-                    <div class="about__buttons">
-                        <a download="" href="assets/pdf/bhushan_sagar_RESUME.pdf" class="button button--flex">
-                            Download CV <i class="uil uil-download-alt button__icon"></i>
-                        </a>
                     </div>
                 </div>
             </div>
