--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
                             <div>
                                 <h1 class="skills__title">SQL Developer</h1>
-                                <span class="skills__subtitle">More then 0.9 years</span>
+                                <span class="skills__subtitle">More than 0.9 years</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -221,6 +221,16 @@
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__mysql"></span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name"><img src="/assets/img/selenium.png" class="skills__logo"
+                                            width="40px" alt=""> Selenium</h3>
+                                    <span class="skills__number">82%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__photoshop"></span>
                                 </div>
                             </div>
                             <div class="skills__data">
@@ -256,7 +266,7 @@
 
                             <div>
                                 <h1 class="skills__titles">Data Engineer</h1>
-                                <span class="skills__subtitle">More then 2 years</span>
+                                <span class="skills__subtitle">More than 2 years</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
