--- a/index.html
+++ b/index.html
@@ -225,16 +225,6 @@
                             </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name"><img src="/assets/img/selenium.png" class="skills__logo"
-                                            width="40px" alt=""> Selenium</h3>
-                                    <span class="skills__number">82%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__photoshop"></span>
-                                </div>
-                            </div>
-                            <div class="skills__data">
-                                <div class="skills__titles">
                                     <h3 class="skills__name"><img src="/assets/img/azure.png" class="skills__logo"
                                             width="40px" alt=""> Azure</h3>
 
@@ -252,6 +242,26 @@
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__python"></span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name"><img src="/assets/img/selenium.png" class="skills__logo"
+                                            width="40px" alt=""> Selenium</h3>
+                                    <span class="skills__number">82%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__photoshop"></span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name"><img src="/assets/img/pandas.png" class="skills__logo"
+                                            width="40px" alt=""> Pandas</h3>
+                                    <span class="skills__number">80%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__photoshop"></span>
                                 </div>
                             </div>
                         </div>
