--- a/index.html
+++ b/index.html
@@ -451,6 +451,20 @@
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
+                                    <div class="portfolio__content grid swiper-slide">
+                                        <img src="/assets/img/ipl data anlysis streaming using python.gif" alt="" class="portfolio__img">
+                                        <div class="portfolio__data">
+                                            <h3 class="portfolio__title">IPL Data Analysis</h3>
+                                            <p class="portfolio__description">IPL Cricket Match Data Integration</p>
+                                            <a href="https://github.com/BhushanSagar/IPL-Data-Analysis/" target="_blank" class="button button--flex button--small portfolio__button">
+                                                Demo
+                                                <i class="uil uil-arrow-right button__icon"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="services__modal-service">
+                                    <i class="uil uil-check-circle services__modal-icon"></i>
                                     <p>Web page development.</p>
                                 </li>
                                 <li class="services__modal-service">
@@ -532,8 +546,7 @@
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">IPL Data Analysis</h3>
-                            <p class="portfolio__description">Website adaptable to all devices, with ui components and
-                                animated interactions.</p>
+                            <p class="portfolio__description">IPL Cricket Match Data Integration.</p>
                                 <a href="https://github.com/BhushanSagar/IPL-Data-Analysis" target="_blank" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
