--- a/index.html
+++ b/index.html
@@ -465,15 +465,31 @@
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Web page development.</p>
+                                    <div class="portfolio__content grid swiper-slide">
+                                        <img src="/assets/img/athena.gif" alt="" class="portfolio__img">
+                                        <div class="portfolio__data">
+                                            <h3 class="portfolio__title">Aws Athena For SmartPhone Data Analysis</h3>
+                                            <p class="portfolio__description">Automate Daily Processing and Analysis from AWS S3 Using AWS Glue and AWS Athena</p>
+                                            <a href="https://github.com/BhushanSagar/aws-athena-project-for-querying-Smartphone-data/" target="_blank" class="button button--flex button--small portfolio__button">
+                                                Demo
+                                                <i class="uil uil-arrow-right button__icon"></i>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I create ux element interactions.</p>
-                                </li>
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I position your company brand.</p>
+                                    <div class="portfolio__content grid swiper-slide">
+                                        <img src="/assets/img/Quality Data Ingestion.gif" alt="" class="portfolio__img">
+                                        <div class="portfolio__data">
+                                            <h3 class="portfolio__title">Quality Data Ingestion With AWS Glue</h3>
+                                            <p class="portfolio__description">Ingest Quality data into AWS Redshift and Data Visualization Using Power-BI</p>
+                                            <a href="https://github.com/BhushanSagar/QUALITY-DATA-INGESTION-WITH-AWS-GLUE/" target="_blank" class="button button--flex button--small portfolio__button">
+                                                Demo
+                                                <i class="uil uil-arrow-right button__icon"></i>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
