--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                                     <span class="skills__number">82%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__photoshop"></span>
+                                    <span class="skills__percentage skills__Selenium"></span>
                                 </div>
                             </div>
                             <div class="skills__data">
@@ -261,7 +261,7 @@
                                     <span class="skills__number">80%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skills__percentage skills__photoshop"></span>
+                                    <span class="skills__percentage skills__Pandas"></span>
                                 </div>
                             </div>
                         </div>
