--- a/index.html
+++ b/index.html
@@ -515,16 +515,12 @@
                             <ul class="services__modal-services grid">
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I develop the user interface.</p>
-                                </li>
-                                <li class="services__modal-service">
-                                    <i class="uil uil-check-circle services__modal-icon"></i>
                                     <div class="portfolio__content grid swiper-slide">
                                         <img src="/assets/img/flight.png" alt="" class="portfolio__img">
                                         <div class="portfolio__data">
                                             <h3 class="portfolio__title">Flight Booking System</h3>
                                             <p class="portfolio__description">Flight Booking system using Sql Server</p>
-                                            <a href="https://github.com/BhushanSagar/advance-concepts/blob/main/bank%20system%20%2C%20pizza%20and%20library/sql_trigger_tasks.sql" target="_blank" class="button button--flex button--small portfolio__button">
+                                            <a href="https://github.com/BhushanSagar/SQL-Projects/blob/main/flight_booking_task/flight_booking_task.sql" target="_blank" class="button button--flex button--small portfolio__button">
                                                 Demo
                                                 <i class="uil uil-arrow-right button__icon"></i>
                                             </a>
@@ -538,7 +534,7 @@
                                         <div class="portfolio__data">
                                             <h3 class="portfolio__title">Banking System</h3>
                                             <p class="portfolio__description">Bank Daily Transaction Using Sql Server</p>
-                                            <a href="https://github.com/BhushanSagar/advance-concepts/blob/main/bank%20system%20%2C%20pizza%20and%20library/sql_trigger_tasks.sql" target="_blank" class="button button--flex button--small portfolio__button">
+                                            <a href="https://github.com/BhushanSagar/SQL-Projects/blob/main/Bank_System/bank_system.sql" target="_blank" class="button button--flex button--small portfolio__button">
                                                 Demo
                                                 <i class="uil uil-arrow-right button__icon"></i>
                                             </a>
@@ -547,7 +543,31 @@
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I position your company brand.</p>
+                                    <div class="portfolio__content grid swiper-slide">
+                                        <img src="/assets/img/Library.png" alt="" class="portfolio__img">
+                                        <div class="portfolio__data">
+                                            <h3 class="portfolio__title">Library Management System</h3>
+                                            <p class="portfolio__description">Books Management Using Sql Server</p>
+                                            <a href="https://github.com/BhushanSagar/SQL-Projects/blob/main/library_system/library_system.sql" target="_blank" class="button button--flex button--small portfolio__button">
+                                                Demo
+                                                <i class="uil uil-arrow-right button__icon"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="services__modal-service">
+                                    <i class="uil uil-check-circle services__modal-icon"></i>
+                                    <div class="portfolio__content grid swiper-slide">
+                                        <img src="/assets/img/Pizza.png" alt="" class="portfolio__img">
+                                        <div class="portfolio__data">
+                                            <h3 class="portfolio__title">Pizza Order Management System</h3>
+                                            <p class="portfolio__description">Pizza Sales Management Using Sql Server</p>
+                                            <a href="https://github.com/BhushanSagar/SQL-Projects/blob/main/pizza_order_system/pizza_order_system.sql" target="_blank" class="button button--flex button--small portfolio__button">
+                                                Demo
+                                                <i class="uil uil-arrow-right button__icon"></i>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
