--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
                                     <div class="portfolio__content grid swiper-slide">
-                                        <img src="/assets/img/bank.png" alt="" class="portfolio__img">
+                                        <img src="/assets/img/Bank.png" alt="" class="portfolio__img">
                                         <div class="portfolio__data">
                                             <h3 class="portfolio__title">Banking System</h3>
                                             <p class="portfolio__description">Bank Daily Transaction Using Sql Server</p>
